--- a/csv_app/templates/csv_app/index.html
+++ b/csv_app/templates/csv_app/index.html
@@ -61,6 +61,16 @@
                 {% endif %}
                 </button>
             </div>
+            <!-- <br>
+            <div>
+                <button class="btn btn-primary" type="submit">
+                {% if reset %}
+                リセット
+                {% else %}
+                変換
+                {% endif %}
+                </button>
+            </div> -->
         </form>
         <hr>
         <p>対象ファイル：{{filename}}</p>
