--- a/csv_app/templates/csv_app/master.html
+++ b/csv_app/templates/csv_app/master.html
@@ -35,13 +35,28 @@
         }
         .form1{
             position: relative;
-            width: 800px;           
+            width: 100%;
+            max-width: 800px;           
         }
         .reset_btn{
             position: absolute;
             bottom: 0;
             left: 100px;
         }
+        .flex-all {
+            display: flex;
+            flex-wrap: wrap;
+            align-items: center;
+            margin-bottom: 1em;
+        }
+        .flex{
+            display: flex;
+            flex-wrap: wrap;
+            align-items: center;
+            padding-right: 1em;
+        }
+        .flex div{padding: 0.2em;}
+
     </style>
 </head>
 <body>
@@ -72,7 +87,7 @@
             </div>
             <!-- 手動方式-->
             <div class="back2 mt-4">
-                <h2>手動登録/修正</h2>
+                <h2>手動登録 / 修正</h2>
                 <hr>              
                 <div style="margin-left: 5px;">
 
@@ -88,28 +103,32 @@
                         {% if message %}
                         <p class="mt-2" style="color: red;">{{message}}</p>
                         {% endif %}
+
                         <form action="{% url 'master3' %}" method="post">
                             {% csrf_token %}
-                            <p><label>JANコード：</label>{{form2.jan}}</p>
-
-                            <p><label>品番：</label>{{form2.hinban}}
-                                <label>型番：</label>{{form2.kataban}}</p>
-
-                            
-                            
-                            
-                            <button class="btn btn-primary" type="submit">登録</button>
+                            <div class="flex-all">
+                                <div class="flex">
+                                    <div><label>JANコード:</label></div>
+                                    <div style="width: 170px;">{{form2.jan}}</div>
+                                </div>
+                                <div class="flex">
+                                    <div>品番:</div>
+                                    <div style="width: 80px;">{{form2.hinban}}</div>
+                                </div>
+                                <div class="flex">
+                                    <div>型番:</div>
+                                    <div style="width: 80px;">{{form2.kataban}}</div>
+                                </div>
+                            </div>
+                            <div style="margin-left: 15px;">
+                                <button class="btn btn-primary" type="submit">登録</button>
+                            </div>
                         </form>
-                        <div class="reset_btn">
-                            <a href="{% url 'master_kanri' %}"><button class="btn btn-secondary">リセット</button></a>
-                        </div>
-
-                        <form action="">
-                            {{form3.as_p}}
-                        </form>
+                            <div class="reset_btn">
+                                <a href="{% url 'master_kanri' %}"><button class="btn btn-secondary">リセット</button></a>
+                            </div>
                     </div>
       
-
                 </div>
             </div>
 
