--- a/csv_app/templates/csv_app/master.html
+++ b/csv_app/templates/csv_app/master.html
@@ -61,7 +61,7 @@
 </head>
 <body>
     <div class="container mt-5 mb-5">
-        <div style="text-align: right;"><a href="{% url 'index' %}">HOME</a></div>
+        <div style="text-align: right;"><a href="javascript:;" onclick="window.close();">閉じる</a></div>
         <div class="back1">
             <h1>マスタ管理（CAB）</h1>
             <!-- CSV方式 -->
