--- a/csv_app/templates/csv_app/index.html
+++ b/csv_app/templates/csv_app/index.html
@@ -61,10 +61,10 @@
                 <div class="flex" id="sentaku">ファイル未選択：</div>
                 <div class="flex" id="maker_list" style="margin-left: -10px;">
                     <select name="メーカー" class="form-select" aria-label="Default select example" style="width: 130px;">
-                        <option value="トムス㈱">TOMS</option>
-                        <option value="キャブ㈱">CAB</option>
-                        <option value="フェリック㈱">フェリック</option>
-                        <option value="㈱ボンマックス">ボンマックス</option>
+                        <option value="トムス(株)">TOMS</option>
+                        <option value="キャブ(株)">CAB</option>
+                        <option value="フェリック(株)">フェリック</option>
+                        <option value="(株)ボンマックス">ボンマックス</option>
                     </select>
                 </div>
                 <div class="flex">
@@ -83,17 +83,16 @@
                 var maker_list = document.getElementById("maker_list");
                 var sentaku = document.getElementById("sentaku");
                 var kekka
+                var list=["トムス(株)","キャブ(株)","フェリック(株)","(株)ボンマックス"]
 
-                if (maker[0].length==0){
+                if (list.includes(maker[0])){
+                    // 自動                 
+                    maker_list.style.display="none";
+                    kekka="自動判別：";                    
+                } else {
                     //手動
-                    console.log(maker[0]);
                     maker_list.style.display="block";
                     kekka="手動選択：";
-                } else {
-                    // 自動
-                    console.log("no");                   
-                    maker_list.style.display="none";
-                    kekka="自動判別：";
                 }
                 
                 sentaku.innerText=kekka;
