--- a/csv_app/templates/csv_app/index.html
+++ b/csv_app/templates/csv_app/index.html
@@ -79,7 +79,8 @@
                     <a href="https://cabclothing.jp/" target="_blank">CAB</a> / 
                     <a href="http://felicol.asg-web.com/login/login.html" target="_blank">フェリック</a> / 
                     <a href="https://www.lifemaxonline.com/login" target="_blank">ボンマックス</a> / 
-                    <a href="https://order.shoeisilk.com/mypage/login.php?transactionid=7e28dac516b0e3754f3db6c5cb3b103b3f40fd1a" target="_blank">松栄シルク</a>
+                    <a href="https://order.shoeisilk.com/mypage/login.php?transactionid=7e28dac516b0e3754f3db6c5cb3b103b3f40fd1a" target="_blank">松栄シルク</a> / 
+                    <a href="https://markless.jp/" target="_blank">トレードワークス</a>
                 </label>
                 <input class="form-control form-control-lg" type="file" id="formFile" name="csv2">
             </div>
@@ -90,12 +91,13 @@
 
 
                 <div class="flex" id="maker_list" style="margin-left: -10px;">
-                    <select name="メーカー" class="form-select" aria-label="Default select example" style="width: 130px;">
+                    <select name="メーカー" class="form-select" aria-label="Default select example" style="width: 140px;">
                         <option value="トムス(株)">TOMS</option>
                         <option value="キャブ(株)">CAB</option>
                         <option value="フェリック(株)">フェリック</option>
                         <option value="(株)ボンマックス">ボンマックス</option>
                         <option value="株式会社松栄シルク">松栄シルク</option>
+                        <option value="(株)トレードワークス">トレードワークス</option>
                     </select>
                 </div>
                 <div class="flex">
@@ -116,7 +118,7 @@
                 var sentaku = document.getElementById("sentaku");
                 var mess = document.getElementById("mess");
                 var kekka
-                var list=["トムス(株)","キャブ(株)","フェリック(株)","(株)ボンマックス","株式会社松栄シルク"]
+                var list=["トムス(株)","キャブ(株)","フェリック(株)","(株)ボンマックス","株式会社松栄シルク","(株)トレードワークス"]
 
                 // ファイルの有無
                 if (files.count != 0){
