--- a/csv_app/templates/csv_app/index.html
+++ b/csv_app/templates/csv_app/index.html
@@ -82,7 +82,7 @@
                     <a href="https://order.shoeisilk.com/mypage/login.php?transactionid=7e28dac516b0e3754f3db6c5cb3b103b3f40fd1a" target="_blank">松栄シルク</a> / 
                     <a href="https://markless.jp/" target="_blank">トレードワークス</a>
                 </label>
-                <input class="form-control form-control-lg" type="file" id="formFile" name="csv2">
+                <input class="form-control form-control-lg"  style="height: 100px;" type="file" id="formFile" name="csv2">
             </div>
             <div class="flex-all">
 
